tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-2.yy.stderr
error[E0308]: mismatched types
  --> $DIR/super-traits-fail-2.rs:17:5
   |
LL |     x.a();
   |     ^^^^^ expected `host`, found `true`
   |
   = note: expected constant `host`
              found constant `true`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
